[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "echo360"
version = "3.0.1"
description = "Commandline tool for automated downloads of echo360 videos"
readme = "README.md"
keywords = ["downloader", "echo360", "lectures", "university", "video"]
license = { text = "MIT" }
authors = [{ name = "soraxas", email = "oscar@tinyiu.com" }]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
dependencies = [
    "ffmpy>=0.6.3",
    "gevent>=25.9.1",
    "pick>=2.4",
    "pip-ensure-version>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "selenium>=4.36",
    "tqdm>=4.67.1",
    "undetected-chromedriver>=3.5.5",
    "wget>=3.2",
]

urls.Code = "https://github.com/soraxas/echo360"
urls.Documentation = "https://github.com/soraxas/echo360/blob/master/README.md"
urls.Homepage = "https://github.com/soraxas/echo360"
urls."Issue tracker" = "https://github.com/soraxas/echo360/issues"
scripts.echo360-downloader = "src.main:main"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14",
    "ty>=0.0.1a22",
    "types-gevent>=25.4.0.20250915",
    "types-python-dateutil>=2.9.0.20251008",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
]

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.hatch.build.targets.sdist]
only-include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
lint.select = ["I"]
lint.fixable = ["ALL"]
